# recipes-api

./: (template) Dockerfile  .dockerignore  .env_example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  entry.py  main.py  pyproject.toml  requirements.txt
app/: conf.py  main.py  routes.py
app/api/root/: views.py
app/api/table_main/: schemas.py  views.py
app/api/table_recipes/: schemas.py  views.py
app/api/table_sub_cat/: schemas.py  views.py
app/db/: cook.db
app/dependencies/: db.py
app/domain/: table_main.py  table_recipes.py  table_sub_cat.py
migrations/: env.py
migrations/versions/: 080acb109513_remove_local_id_from_table_category.py  4152a6952ed0_init.py  6aae3f3f56bb_add_image_table.py  6c2c05bb87a9_rename_indexes.py  89492845fc5c_add_images_and_indexes.py  cf186b318bcf_add_index_for_public_id.py  d4fe00206b46_init.py  d9323ff7cfe0_init.py  e2bc41fd6f1f_add_recipe_idx.py  e62f57974f9a_change_ingredient_relations.py  e8642ad49469_add_autoincrement_to_primary_key.py
src/: conf.py  main.py  middlewares.py  routes.py  schemas.py
src/api/root/: schemas.py  views.py
src/api/table_main/: schemas.py  views.py
src/api/table_recipes/: schemas.py  views.py
src/api/table_sub_cat/: schemas.py  views.py
src/core/: app_exceptions.py  app_logger.py  config.py
src/dependencies/: db.py  neon_db.py  sqlite_db.py
src/domain/: table_main.py  table_recipes.py  table_sub_cat.py
src/domain/neon_models/: __init__.py  base.py  category.py  ingredient.py  recipe.py  recipe_ingredient_link.py  user.py
src/domain/repository/: sqlite_repository.py
src/domain/schemas/: schemas.py
src/domain/services/: auth.py  category_service.py  cloudinary_service.py  image_service.py  (+4 more)
src/utils/: cloudinary_util.py  result.py
tests/: conftest.py
tests/auth/: test_get_user_by_username.py
tests/repository/: test_recipe.py
tests/service/: test_upload.py
tests/utils/: datetime_util.py
(+34 files in other folders)
