[project]
name = "recipes-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "mypy>=1.17.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.12",
    "sqlalchemy>=2.0.43",
    "starlette>=0.47.3",
    "uvicorn[standard]>=0.35.0",
]
